//
//  AccessibilityIdentifiers.swift
//  LiveWeather
//
//  Created by Joan Marc Sanahuja on 26/5/25.
//

import Foundation

struct AccessibilityIdentifier {
    static let cityDetailScreenTitle = "AccessibilityIdentifier_WeatherDetailView_Title"
}
