...
        tableView.keyboardDismissMode = .onDrag
        return tableView
    }()
    
    let searchController: UISearchController = {
        let searchController = UISearchController(searchResultsController: nil)
        searchController.searchBar.placeholder = "Search a place..."
        searchController.obscuresBackgroundDuringPresentation = false
        searchController.searchBar.accessibilityIdentifier = "CitySearchBar"
        return searchController
    }()
    
    let emptyStateView: UILabel = {
...
